# graveyard

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  styles.css
docs/assets/: graveyard-demo.tape
npm/graveyard-darwin-arm64/: package.json
npm/graveyard-darwin-x64/: package.json
npm/graveyard-linux-arm64/: package.json
npm/graveyard-linux-x64/: package.json
npm/graveyard-windows-x64/: package.json
scripts/: cleanup-npm-packages.js  prepare-hero-demo.sh  prepare-npm-packages.js
src/: error.rs  main.rs
src/baseline/: mod.rs
src/cli/: baseline.rs  completions.rs  languages.rs  mod.rs  scan.rs
src/config/: loader.rs  mod.rs
src/graph/: mod.rs  reachability.rs
src/output/: csv.rs  json.rs  mod.rs  sarif.rs  table.rs
src/parse/: cache.rs  go.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  types.rs  typescript.rs
src/scoring/: formula.rs  git_history.rs  mod.rs  static_score.rs
src/walker/: manifest.rs  mod.rs
tests/: test_baseline.rs  test_ci_gate.rs  test_output_formats.rs  test_scan_go.rs  test_scan_js.rs  test_scan_mixed.rs  test_scan_python.rs  test_scan_rust.rs
tests/common/: mod.rs
tests/snapshots/: test_output_formats__scan_csv_output.snap  test_output_formats__scan_json_output.snap  test_output_formats__scan_sarif_output.snap
