[build-system]
requires = ["maturin>=1.12.6,<2"]
build-backend = "maturin"

[project]
name = "graveyard"
version = "0.1.0"
description = "Scan polyglot repositories for dead code and rank findings with git-history-weighted confidence."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/you/graveyard"
Repository = "https://github.com/you/graveyard"

[tool.maturin]
bindings = "bin"
features = []
python-source = "python"
