[build-system]
requires = ["maturin>=1.12.6,<2"]
build-backend = "maturin"

[project]
name = "graveyard"
version = "0.1.0"
description = "Find dead code across Python, JS/TS, Go, and Rust with git-aware confidence scoring."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/Meru143/graveyard"
Repository = "https://github.com/Meru143/graveyard"

[tool.maturin]
bindings = "bin"
features = []
python-source = "python"
